tests/integration/build/errors/catch.c
/* Code generated using the Orng compiler https://ornglang.org */
#include <math.h>
#include <stdio.h>
#include <stdint.h>
#include <stdlib.h>

#include "debug.inc"

/* Function forward definitions */
int64_t _436_main(void);

/* Function definitions */
int64_t _436_main(void) {
    int64_t _436_$retval;
    _436_$retval = 118;
    return _436_$retval;
}

int main(void) {
  printf("%ld",_436_main());
  return 0;
}
